Fixed buttons, added bio, resized hobby photo

--- a/hobbies.html
+++ b/hobbies.html
@@ -8,9 +8,9 @@
 <body class="dark-theme">
   <div id="banner">
     <!--<button class="btn" id="theme">Light Theme</button>-->
-    <button class="btn" id="hobbies-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/hobbies.html';">Hobbies</button>
-    <button class="btn" id="projects-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/projects.html';">Projects</button>
-    <button class="btn" id="home-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/index.html';">Home</button>
+    <button class="btn" id="hobbies-btn" onclick="location.href='https://ahazen2013.github.io/hobbies.html';">Hobbies</button>
+    <button class="btn" id="projects-btn" onclick="location.href='https://ahazen2013.github.io/projects.html';">Projects</button>
+    <button class="btn" id="home-btn" onclick="location.href='https://ahazen2013.github.io/';">Home</button>
   </div>
   <div class="main" style="width: 30%;">
     <h1>Hobbies</h1>
@@ -20,12 +20,10 @@
       <li id="cos">Cosplay</p>
       <li id="er">Escape Rooms</p>
       <li id="rc">Rock Climbing</p>
-      <!--<li id="ski">Skiing</p>-->
       <li id="mr">Terrain Racing</p>
     </ul>
   </div>
-  <img id="profile" src="Assets/Me.jpeg">
-  <!--<p class="main" style="width: 30%; padding-top: 10px; line-height: 1.5;">This is what I like to do in my spare time.</p>-->
+  <img id="profile" src="Assets/Ballroom.jpg" style="width:55%">
   <script src="hobbiesJS.js"></script>
   <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
