--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body class="dark-theme">
   <div id="banner">
     <!--<button class="btn" id="theme">Light Theme</button>-->
-    <button class="btn" id="hobbies-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/hobbies.html';">Hobbies</button>
-    <button class="btn" id="projects-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/projects.html';">Projects</button>
-    <button class="btn" id="home-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/index.html';">Home</button>
+    <button class="btn" id="hobbies-btn" onclick="location.href='https://ahazen2013.github.io/hobbies.html';">Hobbies</button>
+    <button class="btn" id="projects-btn" onclick="location.href='https://ahazen2013.github.io/projects.html';">Projects</button>
+    <button class="btn" id="home-btn" onclick="location.href='https://ahazen2013.github.io/';">Home</button>
   </div>
   <div class="main">
     <h1>Alex Hazen</h1>
-    <p>Welcome to my website! I am a recent graduate of the USC Viterbi school of Engineering, with a BS in Computer Science.</p>
+    <p>Welcome to my website! I am a recent graduate of the USC Viterbi school of Engineering, with a BS in Computer Science. In addition to core classes related to algorithms, software engineering practices, and object-oriented programming, my upper-division electives and special interests included such topics as artificial intelligence, video game design and programming, and robotics.</p>
     <div> <!--LinkedIn button-->
       <button id="LinkedIn" class="btn" onclick="window.open('http://www.linkedin.com/in/alexander-hazen-06703b205/','_blank')">Here is a link to my LinkedIn</button>
     </div>
@@ -39,7 +39,7 @@
       <li>Smooth page transitions?</li> <!--https://www.smashingmagazine.com/2016/07/improving-user-flow-through-page-transitions/-->
     </ul>
   </div>
-  <img id="profile" src="Assets/Me.jpeg">
+  <img id="profile" src="Assets/Me.jpg">
   <script src="indexJS.js"></script>
   <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
