--- a/projects.html
+++ b/projects.html
@@ -8,9 +8,9 @@
 <body class="dark-theme">
   <div id="banner">
     <!--<button class="btn" id="theme">Light Theme</button>-->
-    <button class="btn" id="hobbies-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/hobbies.html';">Hobbies</button>
-    <button class="btn" id="projects-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/projects.html';">Projects</button>
-    <button class="btn" id="home-btn" onclick="location.href='file:///C:/Users/ahaze/Desktop/Website/index.html';">Home</button>
+    <button class="btn" id="hobbies-btn" onclick="location.href='https://ahazen2013.github.io/hobbies.html';">Hobbies</button>
+    <button class="btn" id="projects-btn" onclick="location.href='https://ahazen2013.github.io/projects.html';">Projects</button>
+    <button class="btn" id="home-btn" onclick="location.href='https://ahazen2013.github.io/';">Home</button>
   </div>
   <div class="main">
     <h1>Projects</h1>
@@ -27,7 +27,7 @@
       </li>
     </ul>
   </div>
-  <img id="profile" src="Assets/Me.jpeg">
+  <img id="profile" src="Assets/Me.jpg">
   <script src="projectsJS.js"></script>
   <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
