Updated index photo, projects page

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,14 +16,14 @@
     <h1>Hobbies</h1>
     <p>Mouse over text for photos!</p>
     <ul>
-      <li id="br">Ballroom Dancing</p>
-      <li id="cos">Cosplay</p>
-      <li id="er">Escape Rooms</p>
-      <li id="rc">Rock Climbing</p>
-      <li id="mr">Terrain Racing</p>
+      <li id="br">Ballroom Dancing</li>
+      <li id="cos">Cosplay</li>
+      <li id="er">Escape Rooms</li>
+      <li id="rc">Rock Climbing</li>
+      <li id="mr">Terrain Racing</li>
     </ul>
   </div>
-  <img id="profile" src="Assets/Ballroom.jpg" style="width:55%">
+  <img id="hobby" src="Assets/Ballroom.jpg" style="width:55%">
   <script src="hobbiesJS.js"></script>
   <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
