--- a/projects.html
+++ b/projects.html
@@ -14,18 +14,12 @@
   </div>
   <div class="main">
     <h1>Projects</h1>
-    <p>Senior Capstone Website: Mobibi Marketplace</p>
-    <p>Talk about schoolwork, personal projects</p>
-    <p>Current tasks:</p>
-    <ul>
-      <li>Add projects<ul>
-          <li>Capstone</li> <!--https://marketplace.mobibi.com/-->
-          <li>Robotics</li>
-          <li>AI</li>
-          <li>Personal</li> <!--D&D-->
-        </ul>
-      </li>
-    </ul>
+    <p>Below are links to projects I have worked on through school, or as personal projects.</p>
+    <li><a href="https://marketplace.mobibi.com/">Senior Capstone Website: Mobibi Marketplace</a></li>
+    <li><a href="https://larrypickle.itch.io/frog-frenzy/">CSCI 426 Final Project: Frog Frenzy</a></li>
+    <li><a href="https://github.com/ahazen2013/minmax-team-choice">CSCI 360 AI Project: Minmax Team Choice</a></li>
+    <li><a href="https://github.com/ahazen2013/uncertain-path-planning">CSCI 360 AI Project: Uncertain Path Planning</a></li>
+    <li><a href="https://github.com/ahazen2013/2eInitTracker">Personal: Dungeons and Dragons 2nd Edition Initiative Tracker</a></li>
   </div>
   <img id="profile" src="Assets/Me.jpg">
   <script src="projectsJS.js"></script>
